--- a/docker-compose-nvm.yml
+++ b/docker-compose-nvm.yml
@@ -1,11 +1,12 @@
 version: '2.1'
 services:
-  ubuntu1604-dev:
+  ubuntu1604-nvm:
     extends:
       file: ./base.yml
       service: base
     build:
       context: .
+      dockerfile: Dockerfile-nvm
     volumes:
       - ./:/mnt/host
     tty: true
