--- a/docker-compose-smokeping.yml
+++ b/docker-compose-smokeping.yml
@@ -1,13 +1,14 @@
 version: '2.1'
 services:
-  ubuntu1604-dev:
+  ubuntu1604-smokeping:
     extends:
       file: ./base.yml
       service: base
     build:
       context: .
+      dockerfile: Dockerfile-smokeping
     volumes:
       - ./:/mnt/host
     tty: true
     ports:
-      - "${HPORT:-3000}:${CPORT:-3000}"
+      - "${HPORT:-80}:${CPORT:-80}"
