--- a/Dockerfile-chromium
+++ b/Dockerfile-chromium
@@ -1,4 +1,4 @@
 FROM ubuntu:16.04
-RUN apt-get update --fix-missing && apt-get -y install chromium-browser
+RUN apt-get update --fix-missing && apt-get -y install fonts-noto-cjk chromium-browser
 ENV PATH /usr/local/rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 RUN useradd scott
