--- a/Dockerfile-firefox
+++ b/Dockerfile-firefox
@@ -1,3 +1,3 @@
 FROM ubuntu:16.04
-RUN apt-get update --fix-missing && apt-get -y install firefox
+RUN apt-get update --fix-missing && apt-get -y install fonts-noto-cjk firefox
 ENV PATH /usr/local/rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
