--- a/Dockerfile-mysql
+++ b/Dockerfile-mysql
@@ -3,6 +3,6 @@ RUN apt-get update --fix-missing && apt-get -y install build-essential curl wget
 ENV PATH /usr/local/rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 RUN export DEBIAN_FRONTEND=noninteractive && \
 	apt-get -y install mysql-server-5.7 && \
-	service mysql start && \
-	mysqladmin -u root password 123456
+	service mysql start &&\
+	mysql -u root --execute="use mysql; update user set host='%' where host='localhost' and user='root';"
 RUN useradd scott
