--- a/docker-compose-redmine.yml
+++ b/docker-compose-redmine.yml
@@ -38,7 +38,7 @@ volumes:
     driver_opts:
       type: volume
       o: bind
-      device: "${PWD}/volume" # $PWD is system variable of shell of linux
+      device: "${PWD:-/tmp}/volume" # $PWD is system variable of shell of linux
 
 # Note:
 # >> volume: it will copy container file to host with bind opt and device filled path
