--- a/docker-compose-apache.yml
+++ b/docker-compose-apache.yml
@@ -14,4 +14,13 @@ services:
     ports:
       - "${HPORT:-80}:80"
     entrypoint: |
-      /bin/sh -c "echo `ip route show 0.0.0.0/0 | grep -Eo 'via \S+' | awk '{ print $$2 }'`  dockerhost >> /etc/hosts; cp -rf /etc/apache2 /mnt/host && rm -rf /etc/apache2 && chmod -R 777 /mnt/host/apache2 && ln -sf /mnt/host/apache2 /etc/apache2; service rsyslog start; service cron start; service apache2 start; /bin/bash"
+      /bin/sh -c "
+      echo `ip route show 0.0.0.0/0 | grep -Eo 'via \S+' | awk '{ print $$2 }'` dockerhost >> /etc/hosts
+      cp -rf /etc/apache2 /mnt/host
+      rm -rf /etc/apache2
+      chmod o+rwx -R /mnt/host/apache2
+      ln -sf /mnt/host/apache2 /etc/apache2
+      service rsyslog start
+      service cron start
+      service apache2 start
+      tail -f /var/log/apache2/access.log"
